--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "react-scripts start --development",
-    "build": "creaco build",
-    "test": "creaco test",
+    "dev": "craco start --development",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
