--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.2",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.3",
     "react": "^18.1.0",
