--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "all": "^0.0.0",
+    "antd": "^4.20.5",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.2",
+    "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-query": "^3.39.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
