--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.2",
+    "jira-dev-tool": "^1.6.59",
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
