--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "all": "^0.0.0",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.2",
+    "jira-dev-tool": "^1.6.59",
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
