--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.3",
     "all": "^0.0.0",
     "axios": "^0.27.2",
@@ -20,6 +21,7 @@
     "jira-dev-tool": "^1.6.59",
     "qs": "^6.10.3",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
