--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.2",
+    "gh-pages": "^4.0.0",
     "jira-dev-tool": "^1.6.59",
     "qs": "^6.10.3",
     "react": "^18.1.0",
@@ -33,7 +34,9 @@
     "dev": "craco start --development",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"pnpm run build",
+    "deploy":"gh-pages -d build -r git@github.com:CCherry07/CCherry07.github.io.git -b main"
   },
   "eslintConfig": {
     "extends": [
